# pathfinding

./: .gitignore  Cargo.toml  README.md  eframe_template-687c6232580c40e4.js  eframe_template-687c6232580c40e4_bg.wasm  index.html  pathfinding-1a79edd5f059fcc9.js  pathfinding-1a79edd5f059fcc9_bg.wasm  pathfinding-31e7f84cc39b43d6.js  pathfinding-8ca9e0e7e51d15fa.js  pathfinding-8ca9e0e7e51d15fa_bg.wasm  pathfinding-f615525840defed1.js  sw.js
.github/workflows/: pages.yml
scripts/: hostlocal.bat  install_trunk.bat
src/: app.rs  app_settings_panel.rs  demo_panel.rs  demo_settings_panel.rs  entity_property_panel.rs  lib.rs  main.rs  pathfinding.rs  scene_hierarchy_panel.rs  top_panel.rs
src/ecs/: component.rs  component2.rs  entity.rs  mod.rs  pos2.rs  system.rs
src/panel/: app_settings_panel.rs  demo_panel.rs  demo_settings_panel.rs  entity_property_panel.rs  mod.rs  scene_hierarchy_panel.rs  top_panel.rs
src/panel_macros/: cargo.toml
src/panel_macros/src/: lib.rs
