[package]
name = "eframe_template"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.71"

[workspace]
members = [
    ".",
    "./src/panel_macros"
]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
egui = "0.23.0"
egui_extras = "0.23.0"
egui_plot = "0.23.0"
panel_macros = { path = "./src/panel_macros" }

eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
once_cell = "1.18.0"
lazy_static = "1.4.0"
egui_logger = { git = "https://github.com/Stehfyn/egui_logger", branch = "main" }


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = {version = "0.3.0", features = ["async-std"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
poll-promise = {version = "0.3.0", features = ["web"]}


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
